--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+0name: Deploy to EC2
 
 on:
   push:
@@ -23,4 +23,4 @@ jobs:
             docker pull ahmed1salem/teamavailtest-web:latest
             docker stop teamavailtest-web || true
             docker rm teamavailtest-web || true
-            docker run -d -p 80:80 --name teamavailtest-web ahmed1salem/teamavailtest-web:latest
+            docker run -d -p 80:3000 --name teamavailtest-web ahmed1salem/teamavailtest-web:latest
