--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,17 +1,21 @@
-name: Build and Push Docker Image
+name: CI/CD Pipeline - Build and Deploy to EC2
 
 on:
   push:
     branches:
-      - main 
+      - main
 
 jobs:
   build:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -25,3 +29,22 @@ jobs:
           context: .
           push: true
           tags: ahmed1salem/teamavailtest-web:latest
+  deploy:
+      name: Deploy to EC2
+      runs-on: ubuntu-latest
+      needs: build  
+  
+      steps:
+        - name: Deploy to EC2 via SSH
+          uses: appleboy/ssh-action@v1.2.0
+          with:
+            host: ${{ secrets.EC2_HOST }}
+            username: ${{ secrets.EC2_USER }}
+            key: ${{ secrets.EC2_SSH_KEY }}
+            script: |
+              echo "🚀 Starting deployment on EC2..."
+              docker pull ahmed1salem/teamavailtest-web:latest
+              docker stop teamavailtest-web || true
+              docker rm teamavailtest-web || true
+              docker run -d -p 80:80 --name teamavailtest-web ahmed1salem/teamavailtest-web:latest
+              echo "✅ Deployment completed successfully!"
