--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Pipeline
 
 on:
   push:
@@ -7,8 +7,10 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted   # ده المهم، عشان يشتغل على جهازك المحلي
+
     steps:
+      # Checkout repo
       - uses: actions/checkout@v3
 
       # Build Docker image
@@ -16,20 +18,32 @@ jobs:
         run: |
           docker build -t ahmed1salem/teamavailtest-web:latest .
 
-      # Push to Docker Hub
-      - name: Push Docker image
+      # Push Docker image to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_NAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - run: docker push ahmed1salem/teamavailtest-web:latest
 
-      # Deploy to Kubernetes
+      - name: Push Docker image
+        run: docker push ahmed1salem/teamavailtest-web:latest
+
+      # Set up kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
-      - name: Deploy to K8s
+
+      # Use minikube context
+      - name: Use minikube context
+        run: kubectl config use-context minikube
+
+      # Deploy to minikube
+      - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/deployment.yaml
           kubectl apply -f k8s/service.yaml
+
+      # Optional: Check pods status
+      - name: Check Pods
+        run: kubectl get pods
